# smartFarm

./: CMakeLists.txt
.github/: copilot-instructions.md
main/: CMakeLists.txt  EventGroup.h  EventGroupe.c  Lamp.c  Lamp.h  LightSensor.c  LightSensor.h  MoistureSensor.c  MoistureSensor.h  Queues.c  Queues.h  Relay.c  Relay.h  Server.h  Servo.c  Servo.h  Sever.c  StepMotor.c  StepMotor.h  TempSensor.c  TempSensor.h  WaterSensor.c  WaterSensor.h  Wifi.c  Wifi.h  gas_sensor.c  gas_sensor.h  log_buffer.c  log_buffer.h  main.c
