idf_component_register(SRCS "Lamp.c" "EventGroupe.c" "gas_sensor.c" "Servo.c" "Queues.c" "Wifi.c" "Sever.c" "StepMotor.c" "Relay.c" "main.c"
                    "TempSensor.c"
                    "LightSensor.c"
                    "WaterSensor.c"
                    "MoistureSensor.c"
                    "Relay.c"
                    "StepMotor.c"

                    INCLUDE_DIRS ".")
